--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,9 @@
     "react/no-array-index-key": [0],
     "react/no-danger": [0],
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
+    "arrow-body-style": "off",
+    "prefer-arrow-callback": "off",
+    "react/function-component-definition": "off"
   }
 }
